--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "explorer",
-  "version": "0.0.0",
+  "name": "kroid-explorer",
+  "version": "0.1.0",
   "description": "explorer ========",
   "main": "index.js",
   "scripts": {
